# RUSTY1

./: .gitignore  Cargo.toml  README.md  init_db.sql  run_scraper.bat  run_scraper_dev.bat
init_db/: Cargo.toml
init_db/src/: main.rs
scraper_backend/: Cargo.toml  config.yaml
scraper_backend/src/: main.rs  scraper.rs
scraper_backend/static/: index.html
scraper_backend/tests/: basic.rs
