[package]
name = "scraper_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features=["full"] }
actix-web = "4"
actix-files = "0.6"
actix-cors = "0.7"
serde = { version = "1.0", features=["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
serde_yaml = "0.9"
reqwest = { version = "0.12", features=["json", "gzip", "brotli", "deflate", "cookies", "stream"] }
scraper = "0.18"
rand = "0.8"
chrono = { version="0.4", features=["serde"] }
sqlx = { version = "0.7", features=["sqlite", "runtime-tokio-rustls", "chrono"] }
futures = "0.3"
async-stream = "0.3"
sha2 = "0.10"
env_logger = "0.11"
regex = "1.10"